force-app/main/default/objects/Channel_Partner_Offers__c/Channel_Partner_Offers__c.object-meta.xml
<CustomObject>
    <label>Channel Partner Offers</label>
    <nameField>
        <displayFormat>CPO-{00000000}</displayFormat>
        <label>Channel Partner Offers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>