force-app/main/default/objects/Channel_Partner_Offers__c/fields/Offer_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Description__c</fullName>
    <label>Offer Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>