force-app/main/default/objects/Channel_Partner_Offers__c/fields/Offer_Image__c.field-meta.xml
<CustomField>
    <fullName>Offer_Image__c</fullName>
    <label>Offer Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>